--- a/reveal/css/theme/gdidefault.css
+++ b/reveal/css/theme/gdidefault.css
@@ -56,7 +56,7 @@ body {
 .reveal h4,
 .reveal h5,
 .reveal h6 {
-  margin: 0 0 80px 0;
+  margin: 15px 0;
   color: #f05b62;
   font-family: "Gotham-Bold", Impact, sans-serif;
   line-height: 0.9em;
