Updates for class 2

--- a/reveal/css/reveal.css
+++ b/reveal/css/reveal.css
@@ -318,6 +318,11 @@ body {
 	max-height: 400px;
 }
 
+#squeeze {
+	margin: -15px 15px auto;
+	padding: 0px
+}
+
 .reveal table th,
 .reveal table td {
 	text-align: left;
